--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: portfolio
 description: "A new Flutter project."
 publish_to: 'none'
-version: 0.1.0+2
+version: 0.2.0+3
 
 environment:
   sdk: ">=3.6.0 <4.0.0"
@@ -9,13 +9,17 @@ environment:
 dependencies:
   animated_text_kit: ^4.2.3
   connectivity_plus: ^6.1.4
+  flip_card: ^0.7.0
   flutter:
     sdk: flutter
+  flutter_markdown: ^0.7.7+1
   flutter_spinkit: ^5.2.1
   font_awesome_flutter: ^10.8.0
   internet_connection_checker: ^3.0.1
   internet_connection_checker_plus: ^2.7.2
   mailto: ^2.0.0
+  package_info_plus: ^9.0.0
+  share_plus: ^11.1.0
   shared_preferences: ^2.5.3
   split_view: ^3.2.1
   url_launcher: ^6.3.1
